http-server/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8840"
  name: httpserver
  namespace: default
  labels:
    app: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
        - name: httpserver
          image: sindweller/httpserver:v3.0.0
          ports:
            - containerPort: 8840
          resources:
            limits:
              cpu: 2600m
              memory: 4200Mi
            requests:
              cpu: 210m
              memory: 180Mi
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "echo Hello Waddles > /usr/share/message"]
            preStop:
              exec:
                command: ["/bin/sh", "-c", "echo exit waddles > /usr/share/message"]
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: default
      serviceAccount: default
      securityContext: {}
      imagePullSecrets:
        - name: mydockerhub
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 5%
      maxSurge: 5%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
