http-server/service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    prometheus.io/port: "8840"
    prometheus.io/scrape: "true"
  name: httpserver
  namespace: default
  labels:
    app: httpserver
spec:
  ports:
    - protocol: TCP
      port: 8840
      targetPort: 8840
  selector:
    app: httpserver
  type: ClusterIP
